@@ -2,13 +2,13 @@
 Hash: SHA1
 
 DIST liboggz-0.9.5.tar.gz 554693 RMD160 0032d7775b9dca3bd6a945dc7741ce90e4555b89 SHA1 13edc85bb60e73df783d154d26e8e3daf57b5f4c SHA256 4a9fb386b0609444de021c4bbb8c8d6ba65e93dca86ea68b3f72b0862e2e886c
-EBUILD liboggz-0.9.5.ebuild 798 RMD160 f9973bae37a250e1dff4a896ae6ef7cd2833b8e7 SHA1 1f9171659e2f08387c030fead4cebea1a61b3218 SHA256 3b10fbc905f34e2849b65b3b821a140372b589cc7bb54a09eb4a364f97c4ae81
-MISC ChangeLog 1054 RMD160 ff11baf7e02c3b3da6ae22277ecf17b82e251c96 SHA1 620e770c049eb6e4c9136758fe6bba4b21d9cf33 SHA256 cae58e6b0d2f2025a756c800e13eaf05b784e13bbc81c7fc477bc26ab7b14eb9
+EBUILD liboggz-0.9.5.ebuild 800 RMD160 e755b3ffcc44dc710ab9b34bf76a0e3173ed407e SHA1 3707bcf3532010586a4d5a53bf1db34d043f4f79 SHA256 a80a5659f125e8fce58a1f214d0845c1d6724b41dde65c38a868ed608e1c746a
+MISC ChangeLog 1168 RMD160 4f959f94e6c429d58ca9a33e7d207b9a71a666f6 SHA1 8e00dd11da7831f4837028c79544fa54be0ac8f6 SHA256 22cd46d958c300f9e7fbe88c9d780e0b14d8aa5c660438b4585923532d45ea7d
 MISC metadata.xml 158 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e SHA1 703cea5a2109d41f7c87993c1f01d418a4c85174 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkQSYMACgkQvFcC4BYPU0ogpQCdHCHwrno7IiXxwErO7MCYKd8U
-0KIAoL4tE76jCuEMDiZEGHXPytQIO8f9
-=bZVe
+iEYEARECAAYFAkkQSqgACgkQvFcC4BYPU0of6ACfR8HoXjoUTPiYpmThNGh2bPVU
+ZCIAn2Tfg2n4kFDS/5/h4ugTmKWlLTUa
+=X4WC
 -----END PGP SIGNATURE-----
