@@ -1,12 +1,12 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/liboggz/liboggz-0.9.5.ebuild,v 1.1 2007/08/22 17:32:58 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/liboggz/liboggz-0.9.5.ebuild,v 1.2 2008/11/04 13:14:10 aballier Exp $
 
 DESCRIPTION="Oggz provides a simple programming interface for reading and writing Ogg files and streams"
 HOMEPAGE="http://www.annodex.net/software/liboggz"
 SRC_URI="http://downloads.xiph.org/releases/${PN}/${P}.tar.gz"
 
-LICENSE="as-is"
+LICENSE="BSD"
 SLOT="0"
 KEYWORDS="~amd64 ~ppc ~x86"
 IUSE="doc"
